# openai-auth

./: Cargo.toml  README.md
examples/: 01_basic_manual_sync.rs  02_with_browser_sync.rs  03_basic_manual_async.rs  04_callback_server.rs  05_id_token_sync.rs  06_callback_custom_html.rs
src/: blocking.rs  browser.rs  client.rs  error.rs  jwt.rs  lib.rs  server.rs  types.rs
