[package]
name = "openai-auth"
version = "0.2.0"
edition = "2024"
authors = ["Viktor Gal <viktor@query.mt>"]
license = "MIT"
description = "OpenAI/ChatGPT OAuth 2.0 authentication with PKCE - sync and async APIs"
repository = "https://github.com/querymt/openai-auth"
keywords = ["openai", "oauth", "authentication", "chatgpt", "pkce"]
categories = ["authentication", "api-bindings"]
readme = "README.md"

[features]
default = ["async", "browser"]
blocking = ["reqwest/blocking", "reqwest/rustls-tls"]
async = ["reqwest/rustls-tls"]
browser = ["webbrowser"]
callback-server = ["async", "tiny_http", "querystring", "tokio"]
full = ["blocking", "async", "browser", "callback-server"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
jsonwebtoken = "9"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
webbrowser = { version = "1.0", optional = true }
tiny_http = { version = "0.12", optional = true }
querystring = { version = "1.1", optional = true }
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
keyring = "3.6"

[[example]]
name = "01_basic_manual_sync"
required-features = ["blocking"]

[[example]]
name = "02_with_browser_sync"
required-features = ["blocking", "browser"]

[[example]]
name = "03_basic_manual_async"
required-features = ["async"]

[[example]]
name = "04_callback_server"
required-features = ["async", "browser", "callback-server"]

[[example]]
name = "05_id_token_sync"
required-features = ["blocking"]

[[example]]
name = "06_callback_custom_html"
required-features = ["async", "browser", "callback-server"]
